Change in input names

--- a/Contactus/Contact-us.html
+++ b/Contactus/Contact-us.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="fa">
 <head>
 <meta charset="utf-8">
@@ -8,24 +8,22 @@
 <body>
 <div id="section">
 <h1>ارتباط با مدیر سایت</h1>
-<form action="#" method="post">
+<form action="contact.php" method="post">
 <label for="name">نام کامل :</label>
-<input id="name" type="text"><br>
+<input id="name" type="text" name="name"><br>
 
 <label for="email">ایمیل :</label>
-<input id="email" type="email"><br>
+<input id="email" type="email" name="email"><br>
 
 <label for="Phone">شماه تلفن :</label>
-<input id="Phone" type="number"><br>
+<input id="Phone" type="number" name="Phone"><br>
 
 <label for="titr">موضوع :</label>
-<input id="titr" type="text"><br>
+<input id="titr" type="text" name="titr"><br>
 
 <label for="content">متن :</label>
-<textarea></textarea><br>
-
+<textarea name="description"></textarea><br>
 <input id="submit" type="submit" value="ارسال">
 </form>
 </div>
 </body>
-</html>
